# auto-cov19-post

./: Cargo.toml  README.md
src/: main.rs
