[package]
name = "auto-cov19-post"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.12", features = ["json", "cookies"]}
serde_json = "1.0.85"
tokio = {version = "1.21.2", features = ["full"]}

